production/auth-middleware.yml
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: applications
  name: auth-middleware
spec:
  basicAuth:
    secret: auth-secret
