production/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: applications
spec:
  redirectScheme:
    scheme: https
    permanent: true
