production/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: applications
  name: 'application'
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 80
  selector:
    app: 'application'
